[package]
name = "tripclock"
version = "0.1.0"
authors = ["jellybean stonerfish <stonerfish@geocities.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

eframe = { version = "0.12.0", features = ["time"] }
serde = { version = "1", features = ["derive"], optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm
